fix: config reactify-core