@@ -18,18 +18,14 @@ package io.hoangtien2k3.reactify.filter.http;
 import io.hoangtien2k3.reactify.constants.Constants;
 import io.hoangtien2k3.reactify.filter.properties.HttpLogProperties;
 import io.hoangtien2k3.reactify.model.GatewayContext;
-
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-
 import lombok.AllArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import org.jetbrains.annotations.NotNull;
 import org.springframework.context.annotation.Profile;
 import org.springframework.core.Ordered;
 import org.springframework.core.io.buffer.DataBuffer;
@@ -66,30 +62,25 @@ public class GatewayContextFilter implements WebFilter, Ordered {
     private HttpLogProperties httpLogProperties;
     private CodecConfigurer codecConfigurer;
 
-    /**
-     * {@inheritDoc}
-     */
+    /** {@inheritDoc} */
     @Override
     public int getOrder() {
         return Ordered.HIGHEST_PRECEDENCE;
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    @NotNull
+    /** {@inheritDoc} */
     @Override
-    public Mono<Void> filter(ServerWebExchange exchange, @NotNull WebFilterChain chain) {
+    public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
-        boolean enableRequest = httpLogProperties.getRequest().isEnable();
-        boolean enableResponse = httpLogProperties.getResponse().isEnable();
+        boolean enableRequest = httpLogProperties.getRequest().enable();
+        boolean enableResponse = httpLogProperties.getResponse().enable();
         if (Constants.EXCLUDE_LOGGING_ENDPOINTS.contains(request.getPath().toString())
                 || (!enableRequest && !enableResponse)) {
             return chain.filter(exchange);
         }
         GatewayContext gatewayContext = new GatewayContext();
-        gatewayContext.setReadRequestData(httpLogProperties.getRequest().isEnable());
-        gatewayContext.setReadResponseData(httpLogProperties.getResponse().isEnable());
+        gatewayContext.setReadRequestData(httpLogProperties.getRequest().enable());
+        gatewayContext.setReadResponseData(httpLogProperties.getResponse().enable());
         HttpHeaders headers = request.getHeaders();
         gatewayContext.setRequestHeaders(headers);
         gatewayContext.setStartTime(System.currentTimeMillis());
@@ -118,6 +109,10 @@ public class GatewayContextFilter implements WebFilter, Ordered {
 
     /**
      * ReadFormData
+     *
+     * @param exchange
+     * @param chain
+     * @return
      */
     private Mono<Void> readFormData(ServerWebExchange exchange, WebFilterChain chain, GatewayContext gatewayContext) {
         HttpHeaders headers = exchange.getRequest().getHeaders();
@@ -128,7 +123,7 @@ public class GatewayContextFilter implements WebFilter, Ordered {
                     log.debug("[GatewayContext]Read FormData Success");
                 })
                 .then(Mono.defer(() -> {
-                    Charset charset = Objects.requireNonNull(headers.getContentType()).getCharset();
+                    Charset charset = headers.getContentType().getCharset();
                     charset = charset == null ? StandardCharsets.UTF_8 : charset;
                     String charsetName = charset.name();
                     MultiValueMap<String, String> formData = gatewayContext.getFormData();
@@ -160,12 +155,11 @@ public class GatewayContextFilter implements WebFilter, Ordered {
                                 formDataBodyBuilder
                                         .append(entryKey)
                                         .append("=")
-                                        .append(URLEncoder.encode(entryValue.getFirst(), charsetName))
+                                        .append(URLEncoder.encode(entryValue.get(0), charsetName))
                                         .append("&");
                             }
                         }
                     } catch (UnsupportedEncodingException e) {
-                        log.error("Error encoding form data: {}", e.getMessage(), e);
                     }
                     /*
                      * substring with the last char '&'
@@ -199,13 +193,11 @@ public class GatewayContextFilter implements WebFilter, Ordered {
                             .then(Mono.defer(() -> {
                                 ServerHttpRequestDecorator decorator =
                                         new ServerHttpRequestDecorator(exchange.getRequest()) {
-                                            @NotNull
                                             @Override
                                             public HttpHeaders getHeaders() {
                                                 return httpHeaders;
                                             }
 
-                                            @NotNull
                                             @Override
                                             public Flux<DataBuffer> getBody() {
                                                 return cachedBodyOutputMessage.getBody();
@@ -219,31 +211,36 @@ public class GatewayContextFilter implements WebFilter, Ordered {
 
     /**
      * ReadJsonBody
+     *
+     * @param exchange
+     * @param chain
+     * @return
      */
     private Mono<Void> readBody(ServerWebExchange exchange, WebFilterChain chain, GatewayContext gatewayContext) {
-        return DataBufferUtils.join(exchange.getRequest().getBody()).flatMap(originalDataBuffer -> {
-            DataBuffer retainedDataBuffer = DataBufferUtils.retain(originalDataBuffer);
-            Flux<DataBuffer> cachedFlux = Flux.just(retainedDataBuffer);
+        return DataBufferUtils.join(exchange.getRequest().getBody()).flatMap(dataBuffer -> {
+            DataBufferUtils.retain(dataBuffer);
+            Flux<DataBuffer> cachedFlux =
+                    Flux.defer(() -> Flux.just(dataBuffer.slice(0, dataBuffer.readableByteCount())));
+            /*
+             * repackage ServerHttpRequest
+             */
             ServerHttpRequest mutatedRequest = new ServerHttpRequestDecorator(exchange.getRequest()) {
-                @NotNull
                 @Override
                 public Flux<DataBuffer> getBody() {
                     return cachedFlux;
                 }
             };
-            ServerWebExchange mutatedExchange = exchange.mutate().request(mutatedRequest).build();
+            ServerWebExchange mutatedExchange =
+                    exchange.mutate().request(mutatedRequest).build();
             return ServerRequest.create(mutatedExchange, codecConfigurer.getReaders())
                     .bodyToMono(String.class)
-                    .doOnNext(bodyContent -> {
-                        if (bodyContent != null) {
-                            String cleanedContent = bodyContent.replaceAll("\r", "").replaceAll("\n", "");
-                            gatewayContext.setRequestBody(cleanedContent);
-                        }
-                        log.debug("[GatewayContext] Read JsonBody Success");
+                    .doOnNext(objectValue -> {
+                        if (objectValue != null)
+                            objectValue = objectValue.replaceAll("\r", "").replaceAll("\n", "");
+                        gatewayContext.setRequestBody(objectValue);
+                        log.debug("[GatewayContext]Read JsonBody Success");
                     })
-                    .then(chain.filter(mutatedExchange))
-                    .doFinally(signalType -> DataBufferUtils.release(retainedDataBuffer));
+                    .then(chain.filter(mutatedExchange));
         });
     }
-
 }
